test/resources/typer/passing/Operators.scala
object Operators {
  1 + 1;
  1 - 1;
  1 * 1;
  1 / 1;
  1 % 1;
  1 < 1;
  1 <= 1;
  1 == 1;
  "a" ++ "a";
  "a" == "a";
  true && true;
  true || true;
  true == true;
  () == ();
  - 1;
  ! true
}
