test/resources/typer/failing/OperatorsError.scala
object OperatorsError {
  1 && 1;
  1 || 1;
  1 ++ 1;
  1 + "a";
  1 - "a";
  1 * "a";
  1 / "a";
  1 % "a";
  1 < "a";
  1 <= "a";
  1 && "a";
  1 || "a";
  1 == "a";
  1 ++ "a";
  1 + true;
  1 - true;
  1 * true;
  1 / true;
  1 % true;
  1 < true;
  1 <= true;
  1 && true;
  1 || true;
  1 == true;
  1 ++ true;
  1 + ();
  1 - ();
  1 * ();
  1 / ();
  1 % ();
  1 < ();
  1 <= ();
  1 && ();
  1 || ();
  1 == ();
  1 ++ ();
  "a" + 1;
  "a" - 1;
  "a" * 1;
  "a" / 1;
  "a" % 1;
  "a" < 1;
  "a" <= 1;
  "a" && 1;
  "a" || 1;
  "a" == 1;
  "a" ++ 1;
  "a" + "a";
  "a" - "a";
  "a" * "a";
  "a" / "a";
  "a" % "a";
  "a" < "a";
  "a" <= "a";
  "a" && "a";
  "a" || "a";
  "a" + true;
  "a" - true;
  "a" * true;
  "a" / true;
  "a" % true;
  "a" < true;
  "a" <= true;
  "a" && true;
  "a" || true;
  "a" == true;
  "a" ++ true;
  "a" + ();
  "a" - ();
  "a" * ();
  "a" / ();
  "a" % ();
  "a" < ();
  "a" <= ();
  "a" && ();
  "a" || ();
  "a" == ();
  "a" ++ ();
  true + 1;
  true - 1;
  true * 1;
  true / 1;
  true % 1;
  true < 1;
  true <= 1;
  true && 1;
  true || 1;
  true == 1;
  true ++ 1;
  true + "a";
  true - "a";
  true * "a";
  true / "a";
  true % "a";
  true < "a";
  true <= "a";
  true && "a";
  true || "a";
  true == "a";
  true ++ "a";
  true + true;
  true - true;
  true * true;
  true / true;
  true % true;
  true < true;
  true <= true;
  true ++ true;
  true + ();
  true - ();
  true * ();
  true / ();
  true % ();
  true < ();
  true <= ();
  true && ();
  true || ();
  true == ();
  true ++ ();
  () + 1;
  () - 1;
  () * 1;
  () / 1;
  () % 1;
  () < 1;
  () <= 1;
  () && 1;
  () || 1;
  () == 1;
  () ++ 1;
  () + "a";
  () - "a";
  () * "a";
  () / "a";
  () % "a";
  () < "a";
  () <= "a";
  () && "a";
  () || "a";
  () == "a";
  () ++ "a";
  () + true;
  () - true;
  () * true;
  () / true;
  () % true;
  () < true;
  () <= true;
  () && true;
  () || true;
  () == true;
  () ++ true;
  () + ();
  () - ();
  () * ();
  () / ();
  () % ();
  () < ();
  () <= ();
  () && ();
  () || ();
  () ++ ();
  ! 1;
  - "a";
  ! "a";
  - true;
  - ();
  ! ()
}
